grid and cards formatted, trying to fix bug of images not showing up

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 *{
-  margin:0;
+  margin: 0;
   padding: 0;
 }
 
@@ -22,7 +22,31 @@ h1{
 
 .container{
   height: 500px;
-  width: 500px;
-  background-color:blue;
+  width: 700px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: repeat 1fr 1fr;
+  gap: 1em;
 }
 
+.card{
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: solid 5px blue;
+}
+
+.card img{
+  max-width: 70%;
+  max-height: 70%;
+}
+/* card example css from class
+.front {
+    display: block;
+    background-color: lightblue;
+    height: 100px;
+    width: 75px;
+    border: solid 2px red;
+  }
+  } */
